fix button click jump issue

--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,31 +1,3 @@
-[class*="col-"] {
-  float: left;
-  padding: 15px;
-}
-
-/* For desktop: */
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
-  [class*="col-"] {
-    width: 100%;
-  }
-}
-
-/* ---------------------------------------- */
-
 #root {
   margin: 0;
   overflow: hidden;
@@ -98,38 +70,26 @@ textarea {
 }
 
 button {
-  position: relative;
-  background-color: #008cba;
-  border-radius: 8px;
+  display: inline-block;
+  padding: 8px 12px;
   font-size: 14px;
-  color: #ffffff;
-  padding: 0.8%;
-  width: max-content;
-  text-align: center;
-  transition-duration: 0.4s;
-  text-decoration: none;
-  overflow: hidden;
   cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #00b7ff;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 4px #999;
 }
 
-button:after {
-  content: "";
-  background: #f1f1f1;
-  display: block;
-  position: absolute;
-  padding-top: 300%;
-  padding-left: 350%;
-  margin-left: -20px !important;
-  margin-top: -120%;
-  opacity: 0;
-  transition: all 0.8s;
-}
+button:hover {background-color: #008cba}
 
-button:active:after {
-  padding: 0;
-  margin: 0;
-  opacity: 1;
-  transition: 0s;
+button:active {
+  background-color: #008cba;
+  box-shadow: 0 3px #666;
+  transform: translateY(4px);
 }
 
 #blobs {
@@ -143,18 +103,4 @@ button:active:after {
   width: 300px;
   border: 1px solid;
   margin-right: 3px;
-}
-
-.loader {
-  border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
 }
